@@ -708,43 +708,77 @@ image create photo replace_20x20 -data {
 }
 
 image create photo doneall_20x20 -data {
-iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAABhmlDQ1BJQ0MgcHJvZmlsZQAAKJF9
-kT1Iw1AUhU9bpVUqDnYQEcxQnSyIioiTVqEIFUKt0KqDyUv/oElDkuLiKLgWHPxZrDq4OOvq4CoI
-gj8gjk5Oii5S4n1JoUWMFx7v47x7Du/dB/jrZaaaHWOAqllGKhEXMtlVIfiKEIbQBR9mJGbqc6KY
-hGd93VMf1V2MZ3n3/Vk9Ss5kgE8gnmW6YRFvEE9tWjrnfeIIK0oK8TnxqEEXJH7kuuzyG+eCw36e
-GTHSqXniCLFQaGO5jVnRUIkniaOKqlG+P+OywnmLs1qusuY9+QvDOW1lmeu0BpHAIpYgQoCMKkoo
-w0KMdo0UEyk6j3v4Bxy/SC6ZXCUwciygAhWS4wf/g9+zNfMT425SOA50vtj2xzAQ3AUaNdv+Prbt
-xgkQeAautJa/UgemP0mvtbToEdC7DVxctzR5D7jcAfqfdMmQHClAy5/PA+9n9E1ZoO8W6F5z59Y8
-x+kDkKZZJW+Ag0NgpEDZ6x7vDrXP7d+e5vx+AHqMcqqG+o//AAAABmJLR0QAAAAAAAD5Q7t/AAAA
-CXBIWXMAAA3XAAAN1wFCKJt4AAAAB3RJTUUH5ggfDAI0LlsxZAAAAktJREFUOMvt1E9IUwEcB/Cv
-7rkHj735ZOp7GjhCn6O1mf8qKKJbhwXZn4G7+MI2hyBp1w5Btw6R0XHeMsmXc7FMtzUzrZe0Cere
-qzndjKi0wlV2KJexrS4ZsTroIejg9/iD3+fw+/H7Adv576LaasPZjg53s83WT9P0UCwWW2mzt11o
-EVoecBz3WpblaP5WMEdra6fRZLJ+W1+HJEnt1hPWo6Ya00UAec8iEQsA46ZBQRBqjGZzdzaT+R7w
-+yWSJNfqGmpFUq3OGwsGI9Oy/ArAyqZAp9NJVVVWShRFqSbGJxYeSpJia7adLC4pocKhqeVhvz8E
-wAvg7a8Ztjud15pttmFGw8Tm5ucSdrv91GlBeKqh6TDHsgMVen2FIsvvr/f2Btocjt0ms3nP88XF
-NVeP6242m50EMAQAxAb4JZVSKIpSNeyrF1feLVnT6XQ8vpCYURPE5SqeNy8vLa33i6LfYrGQtXV1
-hz+trmZuu92BdDqdAHDjjy0rihItLS7eyxsMfJFOd3zE53PpGN3HA4cOnvmaSmUHRPGetrDwTdOx
-JruKUOXf8XofzyqKDOAqgNSGk5czLupcV1d8l9G4I7EQXy3lWFqj0RBer3dqp17PcmVlTFl5eeH9
-0dH5QY8nCKAHQPR3gMgB156EQvUMw7zkDdVFADApSS+0Wi1Z39ioBwB5ZvbDoMfzCEAwF/sbiHA4
-nGRZ9sj+goLxZDL5ubevb4zjuFA1z3dnMln1zVuiD4ACYGSrF2QAcAVA58+aDsAlAOcBFGw/mX+X
-Hzli2b839nCKAAAAAElFTkSuQmCC
+    iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAABhmlDQ1BJQ0MgcHJvZmlsZQAAKJF9
+    kT1Iw1AUhU9bpVUqDnYQEcxQnSyIioiTVqEIFUKt0KqDyUv/oElDkuLiKLgWHPxZrDq4OOvq4CoI
+    gj8gjk5Oii5S4n1JoUWMFx7v47x7Du/dB/jrZaaaHWOAqllGKhEXMtlVIfiKEIbQBR9mJGbqc6KY
+    hGd93VMf1V2MZ3n3/Vk9Ss5kgE8gnmW6YRFvEE9tWjrnfeIIK0oK8TnxqEEXJH7kuuzyG+eCw36e
+    GTHSqXniCLFQaGO5jVnRUIkniaOKqlG+P+OywnmLs1qusuY9+QvDOW1lmeu0BpHAIpYgQoCMKkoo
+    w0KMdo0UEyk6j3v4Bxy/SC6ZXCUwciygAhWS4wf/g9+zNfMT425SOA50vtj2xzAQ3AUaNdv+Prbt
+    xgkQeAautJa/UgemP0mvtbToEdC7DVxctzR5D7jcAfqfdMmQHClAy5/PA+9n9E1ZoO8W6F5z59Y8
+    x+kDkKZZJW+Ag0NgpEDZ6x7vDrXP7d+e5vx+AHqMcqqG+o//AAAABmJLR0QAAAAAAAD5Q7t/AAAA
+    CXBIWXMAAA3XAAAN1wFCKJt4AAAAB3RJTUUH5ggfDAI0LlsxZAAAAktJREFUOMvt1E9IUwEcB/Cv
+    7rkHj735ZOp7GjhCn6O1mf8qKKJbhwXZn4G7+MI2hyBp1w5Btw6R0XHeMsmXc7FMtzUzrZe0Cere
+    qzndjKi0wlV2KJexrS4ZsTroIejg9/iD3+fw+/H7Adv576LaasPZjg53s83WT9P0UCwWW2mzt11o
+    EVoecBz3WpblaP5WMEdra6fRZLJ+W1+HJEnt1hPWo6Ya00UAec8iEQsA46ZBQRBqjGZzdzaT+R7w
+    +yWSJNfqGmpFUq3OGwsGI9Oy/ArAyqZAp9NJVVVWShRFqSbGJxYeSpJia7adLC4pocKhqeVhvz8E
+    wAvg7a8Ztjud15pttmFGw8Tm5ucSdrv91GlBeKqh6TDHsgMVen2FIsvvr/f2Btocjt0ms3nP88XF
+    NVeP6242m50EMAQAxAb4JZVSKIpSNeyrF1feLVnT6XQ8vpCYURPE5SqeNy8vLa33i6LfYrGQtXV1
+    hz+trmZuu92BdDqdAHDjjy0rihItLS7eyxsMfJFOd3zE53PpGN3HA4cOnvmaSmUHRPGetrDwTdOx
+    JruKUOXf8XofzyqKDOAqgNSGk5czLupcV1d8l9G4I7EQXy3lWFqj0RBer3dqp17PcmVlTFl5eeH9
+    0dH5QY8nCKAHQPR3gMgB156EQvUMw7zkDdVFADApSS+0Wi1Z39ioBwB5ZvbDoMfzCEAwF/sbiHA4
+    nGRZ9sj+goLxZDL5ubevb4zjuFA1z3dnMln1zVuiD4ACYGSrF2QAcAVA58+aDsAlAOcBFGw/mX+X
+    Hzli2b839nCKAAAAAElFTkSuQmCC
 }
 image create photo done_20x20 -data {
-iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAABhmlDQ1BJQ0MgcHJvZmlsZQAAKJF9
-kT1Iw1AUhU9bpVUqDnYQEcxQnSyIioiTVqEIFUKt0KqDyUv/oElDkuLiKLgWHPxZrDq4OOvq4CoI
-gj8gjk5Oii5S4n1JoUWMFx7v47x7Du/dB/jrZaaaHWOAqllGKhEXMtlVIfiKEIbQBR9mJGbqc6KY
-hGd93VMf1V2MZ3n3/Vk9Ss5kgE8gnmW6YRFvEE9tWjrnfeIIK0oK8TnxqEEXJH7kuuzyG+eCw36e
-GTHSqXniCLFQaGO5jVnRUIkniaOKqlG+P+OywnmLs1qusuY9+QvDOW1lmeu0BpHAIpYgQoCMKkoo
-w0KMdo0UEyk6j3v4Bxy/SC6ZXCUwciygAhWS4wf/g9+zNfMT425SOA50vtj2xzAQ3AUaNdv+Prbt
-xgkQeAautJa/UgemP0mvtbToEdC7DVxctzR5D7jcAfqfdMmQHClAy5/PA+9n9E1ZoO8W6F5z59Y8
-x+kDkKZZJW+Ag0NgpEDZ6x7vDrXP7d+e5vx+AHqMcqqG+o//AAAABmJLR0QAAAAAAAD5Q7t/AAAA
-CXBIWXMAAA3XAAAN1wFCKJt4AAAAB3RJTUUH5ggfDAgpt7K1NwAAAZ9JREFUOMtjYBgFgw4wk6Mp
-JytrQ3hExNLfv39fePDgwX0GBoa/MDkmUg1Lio8v1tbV9f/18yfj5cuXYxgYGLiR5UkyMDo62lBH
-X7/r39+/DJs3bXr65s2bq4yMjF+Q1bAQ7bKkJG4FeflDXFxcTDu3b/947MSJHQwMDEv+////G6cL
-01JSpnV3d//1cvfKZ2Bg4EOWExIUPCkuIcFz4fz5n+s3bjzMwMCwjIGB4S66xSgu/Pj5810uLi4m
-Owfb/revX/xW09Y+tnjx4hsZaWmTVNXUtJ88fvx3+YoV5xkYGFYwMDDsJxjLV69evSksKGirrqEh
-JyIm5r527drt/t7+Vkamxg3fv337v2zJkruPnz5dwsjIOJeBgeEfNgMZsYjJ5eXmntHW0RG9dePm
-F3FJCU4eHh7m1atXv9y/f/8SBgaGDgYGhjekpMOPb96+3a2kqJisoKjIycHBwXT44MEvm7ds2c7A
-wDCNgYHhPjlpl4mBgcGwtaXlb15u7i8GBoadDAwMXjDJoKAgLnLSMAMDA4M+1FXxWCxkGS1oaAMA
-XcmM9siOlSAAAAAASUVORK5CYII=
-}	
+    iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAABhmlDQ1BJQ0MgcHJvZmlsZQAAKJF9
+    kT1Iw1AUhU9bpVUqDnYQEcxQnSyIioiTVqEIFUKt0KqDyUv/oElDkuLiKLgWHPxZrDq4OOvq4CoI
+    gj8gjk5Oii5S4n1JoUWMFx7v47x7Du/dB/jrZaaaHWOAqllGKhEXMtlVIfiKEIbQBR9mJGbqc6KY
+    hGd93VMf1V2MZ3n3/Vk9Ss5kgE8gnmW6YRFvEE9tWjrnfeIIK0oK8TnxqEEXJH7kuuzyG+eCw36e
+    GTHSqXniCLFQaGO5jVnRUIkniaOKqlG+P+OywnmLs1qusuY9+QvDOW1lmeu0BpHAIpYgQoCMKkoo
+    w0KMdo0UEyk6j3v4Bxy/SC6ZXCUwciygAhWS4wf/g9+zNfMT425SOA50vtj2xzAQ3AUaNdv+Prbt
+    xgkQeAautJa/UgemP0mvtbToEdC7DVxctzR5D7jcAfqfdMmQHClAy5/PA+9n9E1ZoO8W6F5z59Y8
+    x+kDkKZZJW+Ag0NgpEDZ6x7vDrXP7d+e5vx+AHqMcqqG+o//AAAABmJLR0QAAAAAAAD5Q7t/AAAA
+    CXBIWXMAAA3XAAAN1wFCKJt4AAAAB3RJTUUH5ggfDAgpt7K1NwAAAZ9JREFUOMtjYBgFgw4wk6Mp
+    JytrQ3hExNLfv39fePDgwX0GBoa/MDkmUg1Lio8v1tbV9f/18yfj5cuXYxgYGLiR5UkyMDo62lBH
+    X7/r39+/DJs3bXr65s2bq4yMjF+Q1bAQ7bKkJG4FeflDXFxcTDu3b/947MSJHQwMDEv+////G6cL
+    01JSpnV3d//1cvfKZ2Bg4EOWExIUPCkuIcFz4fz5n+s3bjzMwMCwjIGB4S66xSgu/Pj5810uLi4m
+    Owfb/revX/xW09Y+tnjx4hsZaWmTVNXUtJ88fvx3+YoV5xkYGFYwMDDsJxjLV69evSksKGirrqEh
+    JyIm5r527drt/t7+Vkamxg3fv337v2zJkruPnz5dwsjIOJeBgeEfNgMZsYjJ5eXmntHW0RG9dePm
+    F3FJCU4eHh7m1atXv9y/f/8SBgaGDgYGhjekpMOPb96+3a2kqJisoKjIycHBwXT44MEvm7ds2c7A
+    wDCNgYHhPjlpl4mBgcGwtaXlb15u7i8GBoadDAwMXjDJoKAgLnLSMAMDA4M+1FXxWCxkGS1oaAMA
+    XcmM9siOlSAAAAAASUVORK5CYII=
+}
+image create photo gitlab_16x12 -data {
+    iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAABhGlDQ1BJQ0MgcHJvZmlsZQAAKJF9
+    kTtIw1AUhv+mlapUHOwg4pChdrIgKuKoVShChVArtOpgctMXNDEkKS6OgmvBwcdi1cHFWVcHV0EQ
+    fIA4OjkpukiJ5yaFFjEeONyP/57/cO65gNCoMs0KjQGabpuZVFLM5VfE8Ct6EKCMIyQzy5iVpDR8
+    4+ueainuEryXf92f0acWLAYEROIZZpg28Trx1KZtcN4njrKyrBKfE4+aNCDxI9cVj984l1wWeM+o
+    mc3MEUeJxVIHKx3MyqZGPEkcUzWd+gs5j1XOW5y1ao215uQvjBT05SWuUw4jhQUsQoIIBTVUUIWN
+    BJ06KRYydJ/08Q+5folcCrkqYOSYxwY0yK4f/A9+79YqTox7nSJJoOvFcT5GgPAu0Kw7zvex4zRP
+    gOAzcKW3/RsNYPqT9Hpbix0B/dvAxXVbU/aAyx1g8MmQTdmVgpRCsQi8n9E35YGBW6B31dtb6x6n
+    D0CWdpW+AQ4OgXiJeq/5vLu7c2//1rT29wMHtHJ8neobVgAAAAZiS0dEAAAAAAAA+UO7fwAAAAlw
+    SFlzAAAN1wAADdcBQiibeAAAAAd0SU1FB+YJAQknBRwbKk4AAAFMSURBVCjPhY49L0NxFMZ/599b
+    raYloQYiIaRSDAaD0KTdDCwmL/0CFoOkGolvIEJiNfIVOkt8BYmFMJaoUI2X3t7b/zHceg3xTOec
+    5/mdc6Clh5XRBf7QV88AVJfSs/Uah38BrzWO7hdH5j4Az6Xo1Uk8Lo9N/QxX8+lJv07c98z6J9Ag
+    A+D7duMn0HDZAmi6kgGQ19XRbO1aTwDCEb2zys5XwAhFz5UkQEev5MTup0r2UeapBIHKZQjPDepw
+    1NIzpEGTBNOpJWOjkmUAiAXzeNJ+bI93t8IxYBBsu+QMT1pCgBTgQCT++U4kIeC0PAGetGScwkW+
+    WbYLolpnGIyjOG3gtFmMURgGVRrNG807hYu8vG/Tvf4uPxw7lmcmXs6CcWxcIcFV6CU6LcXTW1qH
+    vsnbTW03y6wLRkJ9euAUztf4T7qZntHN9Mxv3hvLfnJEdS1UGQAAAABJRU5ErkJggg==
+}
+image create photo bitbucket_16x12 -data {
+    iVBORw0KGgoAAAANSUhEUgAAABAAAAAMCAYAAABr5z2BAAABhGlDQ1BJQ0MgcHJvZmlsZQAAKJF9
+    kTtIw1AUhv+mlapUHOwg4pChdrIgKuKoVShChVArtOpgctMXNDEkKS6OgmvBwcdi1cHFWVcHV0EQ
+    fIA4OjkpukiJ5yaFFjEeONyP/57/cO65gNCoMs0KjQGabpuZVFLM5VfE8Ct6EKCMIyQzy5iVpDR8
+    4+ueainuEryXf92f0acWLAYEROIZZpg28Trx1KZtcN4njrKyrBKfE4+aNCDxI9cVj984l1wWeM+o
+    mc3MEUeJxVIHKx3MyqZGPEkcUzWd+gs5j1XOW5y1ao215uQvjBT05SWuUw4jhQUsQoIIBTVUUIWN
+    BJ06KRYydJ/08Q+5folcCrkqYOSYxwY0yK4f/A9+79YqTox7nSJJoOvFcT5GgPAu0Kw7zvex4zRP
+    gOAzcKW3/RsNYPqT9Hpbix0B/dvAxXVbU/aAyx1g8MmQTdmVgpRCsQi8n9E35YGBW6B31dtb6x6n
+    D0CWdpW+AQ4OgXiJeq/5vLu7c2//1rT29wMHtHJ8neobVgAAAAZiS0dEAAAAAAAA+UO7fwAAAAlw
+    SFlzAAAN1wAADdcBQiibeAAAAAd0SU1FB+YJAQk4GytOGbMAAAFRSURBVCjPlZA9L0RBGIWfmfvO
+    rtilER8RNmh0IiEqlUIr8ZUo/AO1QjQK0RJR+BdqLa0IuyHLEisRX4kgd22y97qv6i67q+BNpjhn
+    Zp5zZszkpo7c+Izwx2mynJ+umINYixcxDmz+FVBRtoAqwPpKjn9Ms+X8p7YTGQr/ASQ8TmsAa3Om
+    KIa3aoLHITAaL//pYe/5tsjjdYH7yzzTg2FNoAC0CpcvAaMA5Yjui1VzFB/oX7rtfQ9CgkqFMAju
+    l6fcc00DgPeQ49hQZWB3Xztj3ZJMDEnCIc7Rk042PFcAPpWTn+beGTOz22H2tVRpzz2VnbgIjZRQ
+    w+yvgEyKQrH0bV757KhawsBDnANVVJU2sbm7OoAFGOsiX082xiAixPXFOUqSbGhgAdYXzE3S4jdA
+    rK1eFpdgfjj9+x8A9DWzmPfpaEiwHlaEJo0+NhZTD/X7X+YcdHg7MQcwAAAAAElFTkSuQmCC
+}
