@@ -10,7 +10,7 @@ exec wish "$0" -- "$@"
 ######################################################
 # Version: 2.0.0
 # Release: alpha
-# Build: 31082022165947
+# Build: 01092022165308
 ######################################################
 
 # определим текущую версию, релиз и т.д.
